# ephemfs

./: .dockerignore  CHANGELOG_SCRIPTS.md  Cargo.toml  DOCKER_HUB_SETUP.md  Dockerfile  ENCRYPTION_OPTIONS.md  EXTERNAL_SECRETS.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SUMMARY.md  K8S_DEPLOYMENT_SUMMARY.md  K8S_QUICKSTART.md  KUBERNETES_USAGE.md  MEMORY_ONLY_EXPLAINED.md  QUICKSTART.md  README.md  RSA_ENCRYPTION.md  SCRIPTS.md  SECURITY.md  VERIFICATION.md  build.sh  docker-compose.yml  k8s-deployment.yaml  k8s-secret-fuse-pod.yaml  mount_ephemfs.sh  setup-github-actions.sh  test-encryption-options.sh  test-k8s-deployment.sh  test-rsa-encryption.sh  test-secretfs.sh  unmount_ephemfs.sh  verify-secretfs.sh
.github/workflows/: README.md  docker-build-push.yml  docker-simple.yml
examples/: custom_cipher.rs  external-api-demo.sh  rust_decrypt_demo.rs  secret_reader_app.rs
src/: asymmetric_encryption.rs  encryption.rs  lib.rs  main.rs  secret_client.rs  secret_fetcher.rs
