[package]
name = "ephemfs"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.16.0"
libc = "0.2.176"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rsa = "0.9"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "ephemfs"
path = "src/lib.rs"

[[bin]]
name = "ephemfs"
path = "src/main.rs"

[[bin]]
name = "secretfs-keygen"
path = "src/bin/secretfs-keygen.rs"

[[example]]
name = "secret_reader_app"
path = "examples/secret_reader_app.rs"
